Bug 299358 - Shadow Artifacts when closing window
Summary: Shadow Artifacts when closing window
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: compositing (other bugs)
Version First Reported In: git master
Platform: unspecified Linux
: NOR normal
Target Milestone: 4.9 Beta 1
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-05-04 10:06 UTC by Martin Flöser
Modified: 2012-05-06 11:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments
Shadows where a window had been (801.41 KB, image/png)
2012-05-04 10:06 UTC, Martin Flöser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2012-05-04 10:06:59 UTC
Created attachment 70851 [details]
Shadows where a window had been

Steps to Reproduce:
1. use Oxygen window decoration
2. use Compositing
3. Verify that shadows are rendered
4. close window

Actual Result:
Shadows are still shown and are removed with next full screen repaint

Expected Result:
Shadows are removed together with the window

Noticed this problem after the many merges on May 03rd.
Comment 1 Thomas Lübking 2012-05-04 11:43:26 UTC
- kwin/gles, backend relevant?
- w/ or w/o altered vsync?
- closing animations?
- oxygen-settings / "window activity change" animated?
Comment 2 Martin Flöser 2012-05-05 09:13:41 UTC
Reproduced the issues with:
* Oxygen
* Aurorae
* OpenGL 1/2 (gles untested)

Problem cannot be reproduced with XRender!

As closing animation Fade is used (verified by using animation very slow).
Comment 3 Thomas Lübking 2012-05-05 13:29:56 UTC
can reproduce - it's likely either because wrong quads, wrong clipping or wrong copyToDeleted
gonna have a close look
Comment 4 Thomas Lübking 2012-05-05 19:08:26 UTC
http://git.reviewboard.kde.org/r/104865/
Comment 5 Thomas Lübking 2012-05-06 11:18:57 UTC
Git commit 51f96f6469fb6c6ff32964a6fa9d1fdb66d7d881 by Thomas Lübking.
Committed on 05/05/2012 at 16:38.
Pushed by luebking into branch 'master'.

invoke decorationRect() in calculations for visibleRect()
FIXED-IN: 4.9.0
REVIEW: 104865

M  +3    -2    kwin/toplevel.cpp

http://commits.kde.org/kde-workspace/51f96f6469fb6c6ff32964a6fa9d1fdb66d7d881