invoke decorationRect() in calculations for visibleRect()

BUG: 299358
FIXED-IN: 4.9.0
REVIEW: 104865